# swpt_lib

./: .projectile  README.md  pyproject.toml
docs/: conf.py  endpoints.rst  index.rst  scan_table.rst  swpt_uris.rst  utils.rst
swpt_lib/: __init__.py  endpoints.py  scan_table.py  swpt_uris.py  utils.py
tests/: test_convertеrs.py  test_endpoints.py  test_scan_table.py  test_swpt_uris.py  test_utils.py
