[tool.poetry]
name = "swpt_lib"
version = "0.1.0"
description = "A library of tools shared by all swaptacular micro-services"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
homepage = "https://github.com/epandurski/swpt_lib"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"
pytest = "^5.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
